{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 951,
  "lineage": "7a90e010-abc0-9d4c-58df-5889c3be1b15",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:700080227344:internet-gateway/igw-0fbf519a226a466ae",
            "id": "igw-0fbf519a226a466ae",
            "owner_id": "700080227344",
            "tags": {
              "Name": "hubseq-oregon-dev-igw",
              "company": "HubSeq"
            },
            "tags_all": {
              "Name": "hubseq-oregon-dev-igw",
              "company": "HubSeq"
            },
            "vpc_id": "vpc-0cffea4f90e4ab656"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "data_front_end_nlb1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:700080227344:loadbalancer/net/nlb-front-end-data-public/4973dbba55eedc13",
            "arn_suffix": "net/nlb-front-end-data-public/4973dbba55eedc13",
            "dns_name": "nlb-front-end-data-public-4973dbba55eedc13.elb.us-west-2.amazonaws.com",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:700080227344:loadbalancer/net/nlb-front-end-data-public/4973dbba55eedc13",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "nlb-front-end-data-public",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-006b096220046e290"
              },
              {
                "subnet_id": "subnet-055bc946ab7a3d117"
              },
              {
                "subnet_id": "subnet-077f33c0fe9e7e604"
              },
              {
                "subnet_id": "subnet-0fa30f015524d724a"
              }
            ],
            "subnets": [
              "subnet-006b096220046e290",
              "subnet-055bc946ab7a3d117",
              "subnet-077f33c0fe9e7e604",
              "subnet-0fa30f015524d724a"
            ],
            "tags": {
              "Name": "hubseq-oregon-dev-nlb-data-frontend",
              "company": "HubSeq"
            },
            "tags_all": {
              "Name": "hubseq-oregon-dev-nlb-data-frontend",
              "company": "HubSeq"
            },
            "vpc_id": "vpc-0cffea4f90e4ab656",
            "zone_id": "Z18D5FSROUN65G"
          },
          "dependencies": [
            "aws_subnet.public_subnets",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "demo_front_end_nlb1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:700080227344:loadbalancer/net/nlb-front-end-demo-public/f05624817851b2ce",
            "arn_suffix": "net/nlb-front-end-demo-public/f05624817851b2ce",
            "dns_name": "nlb-front-end-demo-public-f05624817851b2ce.elb.us-west-2.amazonaws.com",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:700080227344:loadbalancer/net/nlb-front-end-demo-public/f05624817851b2ce",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "nlb-front-end-demo-public",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-006b096220046e290"
              },
              {
                "subnet_id": "subnet-055bc946ab7a3d117"
              },
              {
                "subnet_id": "subnet-077f33c0fe9e7e604"
              },
              {
                "subnet_id": "subnet-0fa30f015524d724a"
              }
            ],
            "subnets": [
              "subnet-006b096220046e290",
              "subnet-055bc946ab7a3d117",
              "subnet-077f33c0fe9e7e604",
              "subnet-0fa30f015524d724a"
            ],
            "tags": {
              "Name": "hubseq-oregon-dev-nlb-demo-frontend",
              "company": "HubSeq"
            },
            "tags_all": {
              "Name": "hubseq-oregon-dev-nlb-demo-frontend",
              "company": "HubSeq"
            },
            "vpc_id": "vpc-0cffea4f90e4ab656",
            "zone_id": "Z18D5FSROUN65G"
          },
          "dependencies": [
            "aws_subnet.public_subnets"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end_nlb_listener_data1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:700080227344:listener/net/nlb-front-end-data-public/4973dbba55eedc13/2ca13a8321daf43f",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:700080227344:targetgroup/front-end-tg-data-1/70244983d23d00d3",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:700080227344:listener/net/nlb-front-end-data-public/4973dbba55eedc13/2ca13a8321daf43f",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:700080227344:loadbalancer/net/nlb-front-end-data-public/4973dbba55eedc13",
            "port": 80,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": {
              "Name": "hubseq-oregon-dev-nlb-listener-data-frontend",
              "company": "HubSeq"
            },
            "tags_all": {
              "Name": "hubseq-oregon-dev-nlb-listener-data-frontend",
              "company": "HubSeq"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.data_front_end_nlb1",
            "aws_lb_target_group.front_end_tg_data1",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end_nlb_listener_data1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:700080227344:listener/net/nlb-front-end-data-public/4973dbba55eedc13/17953b05aadb43e1",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:700080227344:targetgroup/front-end-tg-data-1b/05d02858655e145d",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:700080227344:listener/net/nlb-front-end-data-public/4973dbba55eedc13/17953b05aadb43e1",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:700080227344:loadbalancer/net/nlb-front-end-data-public/4973dbba55eedc13",
            "port": 8080,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": {
              "Name": "hubseq-oregon-dev-nlb-listener-data1b-frontend",
              "company": "HubSeq"
            },
            "tags_all": {
              "Name": "hubseq-oregon-dev-nlb-listener-data1b-frontend",
              "company": "HubSeq"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb_target_group.front_end_tg_data1b",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc",
            "aws_lb.data_front_end_nlb1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end_nlb_listener_data1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:700080227344:listener/net/nlb-front-end-data-public/4973dbba55eedc13/300fb02c3e0614c5",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:700080227344:targetgroup/front-end-tg-data-1c/5f3fce9ba135846e",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:700080227344:listener/net/nlb-front-end-data-public/4973dbba55eedc13/300fb02c3e0614c5",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:700080227344:loadbalancer/net/nlb-front-end-data-public/4973dbba55eedc13",
            "port": 8081,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": {
              "Name": "hubseq-oregon-dev-nlb-listener-data1c-frontend",
              "company": "HubSeq"
            },
            "tags_all": {
              "Name": "hubseq-oregon-dev-nlb-listener-data1c-frontend",
              "company": "HubSeq"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb_target_group.front_end_tg_data1c",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc",
            "aws_lb.data_front_end_nlb1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end_nlb_listener_data1d",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:700080227344:listener/net/nlb-front-end-data-public/4973dbba55eedc13/4ec6de345e714ab3",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:700080227344:targetgroup/front-end-tg-data-1d/2e4d0c2fdb30608e",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:700080227344:listener/net/nlb-front-end-data-public/4973dbba55eedc13/4ec6de345e714ab3",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:700080227344:loadbalancer/net/nlb-front-end-data-public/4973dbba55eedc13",
            "port": 8082,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": {
              "Name": "hubseq-oregon-dev-nlb-listener-data1d-frontend",
              "company": "HubSeq"
            },
            "tags_all": {
              "Name": "hubseq-oregon-dev-nlb-listener-data1d-frontend",
              "company": "HubSeq"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc",
            "aws_lb.data_front_end_nlb1",
            "aws_lb_target_group.front_end_tg_data1d",
            "aws_subnet.public_subnets"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end_nlb_listener_demo1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:700080227344:listener/net/nlb-front-end-demo-public/f05624817851b2ce/2a1caf8d4979fdbb",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:700080227344:targetgroup/front-end-tg-demo-1/413da5d83d6688a0",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:700080227344:listener/net/nlb-front-end-demo-public/f05624817851b2ce/2a1caf8d4979fdbb",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:700080227344:loadbalancer/net/nlb-front-end-demo-public/f05624817851b2ce",
            "port": 80,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": {
              "Name": "hubseq-oregon-dev-nlb-listener-demo-frontend",
              "company": "HubSeq"
            },
            "tags_all": {
              "Name": "hubseq-oregon-dev-nlb-listener-demo-frontend",
              "company": "HubSeq"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.demo_front_end_nlb1",
            "aws_lb_target_group.front_end_tg_demo1",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end_nlb_listener_demo1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:700080227344:listener/net/nlb-front-end-demo-public/f05624817851b2ce/2cdc895ef034bcd0",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:700080227344:targetgroup/front-end-tg-demo-1b/d0e272273189da40",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:700080227344:listener/net/nlb-front-end-demo-public/f05624817851b2ce/2cdc895ef034bcd0",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:700080227344:loadbalancer/net/nlb-front-end-demo-public/f05624817851b2ce",
            "port": 8080,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": {
              "Name": "hubseq-oregon-dev-nlb-listener-demo1b-frontend",
              "company": "HubSeq"
            },
            "tags_all": {
              "Name": "hubseq-oregon-dev-nlb-listener-demo1b-frontend",
              "company": "HubSeq"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.demo_front_end_nlb1",
            "aws_lb_target_group.front_end_tg_demo1b",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end_nlb_listener_demo1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:700080227344:listener/net/nlb-front-end-demo-public/f05624817851b2ce/8c296a21eec80e21",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:700080227344:targetgroup/front-end-tg-demo-1c/9e990862b688d353",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:700080227344:listener/net/nlb-front-end-demo-public/f05624817851b2ce/8c296a21eec80e21",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:700080227344:loadbalancer/net/nlb-front-end-demo-public/f05624817851b2ce",
            "port": 8081,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": {
              "Name": "hubseq-oregon-dev-nlb-listener-demo1c-frontend",
              "company": "HubSeq"
            },
            "tags_all": {
              "Name": "hubseq-oregon-dev-nlb-listener-demo1c-frontend",
              "company": "HubSeq"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.demo_front_end_nlb1",
            "aws_lb_target_group.front_end_tg_demo1c",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end_nlb_listener_demo1d",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:700080227344:listener/net/nlb-front-end-demo-public/f05624817851b2ce/e66f3e344f05bdef",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:700080227344:targetgroup/front-end-tg-demo-1d/1ee6318700f8439b",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:700080227344:listener/net/nlb-front-end-demo-public/f05624817851b2ce/e66f3e344f05bdef",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:700080227344:loadbalancer/net/nlb-front-end-demo-public/f05624817851b2ce",
            "port": 8082,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": {
              "Name": "hubseq-oregon-dev-nlb-listener-demo1d-frontend",
              "company": "HubSeq"
            },
            "tags_all": {
              "Name": "hubseq-oregon-dev-nlb-listener-demo1d-frontend",
              "company": "HubSeq"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.demo_front_end_nlb1",
            "aws_lb_target_group.front_end_tg_demo1d",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end_nlb_listener_demo1e",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:700080227344:listener/net/nlb-front-end-demo-public/f05624817851b2ce/b47f1e2031a5042e",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:700080227344:targetgroup/front-end-tg-demo-1e/4bfb7403bf06b32e",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:700080227344:listener/net/nlb-front-end-demo-public/f05624817851b2ce/b47f1e2031a5042e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:700080227344:loadbalancer/net/nlb-front-end-demo-public/f05624817851b2ce",
            "port": 8083,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": {
              "Name": "hubseq-oregon-dev-nlb-listener-demo1e-frontend",
              "company": "HubSeq"
            },
            "tags_all": {
              "Name": "hubseq-oregon-dev-nlb-listener-demo1e-frontend",
              "company": "HubSeq"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.demo_front_end_nlb1",
            "aws_lb_target_group.front_end_tg_demo1e",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "front_end_tg_data1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:700080227344:targetgroup/front-end-tg-data-1/70244983d23d00d3",
            "arn_suffix": "targetgroup/front-end-tg-data-1/70244983d23d00d3",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:700080227344:targetgroup/front-end-tg-data-1/70244983d23d00d3",
            "lambda_multi_value_headers_enabled": false,
            "name": "front-end-tg-data-1",
            "port": 80,
            "preserve_client_ip": "false",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "tags": {
              "Name": "hubseq-oregon-dev-tg-data-frontend",
              "company": "HubSeq"
            },
            "tags_all": {
              "Name": "hubseq-oregon-dev-tg-data-frontend",
              "company": "HubSeq"
            },
            "target_type": "ip",
            "vpc_id": "vpc-0cffea4f90e4ab656"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "front_end_tg_data1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:700080227344:targetgroup/front-end-tg-data-1b/05d02858655e145d",
            "arn_suffix": "targetgroup/front-end-tg-data-1b/05d02858655e145d",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:700080227344:targetgroup/front-end-tg-data-1b/05d02858655e145d",
            "lambda_multi_value_headers_enabled": false,
            "name": "front-end-tg-data-1b",
            "port": 8080,
            "preserve_client_ip": "false",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "tags": {
              "Name": "hubseq-oregon-dev-tg-data1b-frontend",
              "company": "HubSeq"
            },
            "tags_all": {
              "Name": "hubseq-oregon-dev-tg-data1b-frontend",
              "company": "HubSeq"
            },
            "target_type": "ip",
            "vpc_id": "vpc-0cffea4f90e4ab656"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "front_end_tg_data1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:700080227344:targetgroup/front-end-tg-data-1c/5f3fce9ba135846e",
            "arn_suffix": "targetgroup/front-end-tg-data-1c/5f3fce9ba135846e",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:700080227344:targetgroup/front-end-tg-data-1c/5f3fce9ba135846e",
            "lambda_multi_value_headers_enabled": false,
            "name": "front-end-tg-data-1c",
            "port": 8081,
            "preserve_client_ip": "false",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "tags": {
              "Name": "hubseq-oregon-dev-tg-data1c-frontend",
              "company": "HubSeq"
            },
            "tags_all": {
              "Name": "hubseq-oregon-dev-tg-data1c-frontend",
              "company": "HubSeq"
            },
            "target_type": "ip",
            "vpc_id": "vpc-0cffea4f90e4ab656"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "front_end_tg_data1d",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:700080227344:targetgroup/front-end-tg-data-1d/2e4d0c2fdb30608e",
            "arn_suffix": "targetgroup/front-end-tg-data-1d/2e4d0c2fdb30608e",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:700080227344:targetgroup/front-end-tg-data-1d/2e4d0c2fdb30608e",
            "lambda_multi_value_headers_enabled": false,
            "name": "front-end-tg-data-1d",
            "port": 8082,
            "preserve_client_ip": "false",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "tags": {
              "Name": "hubseq-oregon-dev-tg-data1d-frontend",
              "company": "HubSeq"
            },
            "tags_all": {
              "Name": "hubseq-oregon-dev-tg-data1d-frontend",
              "company": "HubSeq"
            },
            "target_type": "ip",
            "vpc_id": "vpc-0cffea4f90e4ab656"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "front_end_tg_demo1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:700080227344:targetgroup/front-end-tg-demo-1/413da5d83d6688a0",
            "arn_suffix": "targetgroup/front-end-tg-demo-1/413da5d83d6688a0",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:700080227344:targetgroup/front-end-tg-demo-1/413da5d83d6688a0",
            "lambda_multi_value_headers_enabled": false,
            "name": "front-end-tg-demo-1",
            "port": 80,
            "preserve_client_ip": "false",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "tags": {
              "Name": "hubseq-oregon-dev-tg-demo-frontend",
              "company": "HubSeq"
            },
            "tags_all": {
              "Name": "hubseq-oregon-dev-tg-demo-frontend",
              "company": "HubSeq"
            },
            "target_type": "ip",
            "vpc_id": "vpc-0cffea4f90e4ab656"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "front_end_tg_demo1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:700080227344:targetgroup/front-end-tg-demo-1b/d0e272273189da40",
            "arn_suffix": "targetgroup/front-end-tg-demo-1b/d0e272273189da40",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:700080227344:targetgroup/front-end-tg-demo-1b/d0e272273189da40",
            "lambda_multi_value_headers_enabled": false,
            "name": "front-end-tg-demo-1b",
            "port": 8080,
            "preserve_client_ip": "false",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "tags": {
              "Name": "hubseq-oregon-dev-tg-demo1b-frontend",
              "company": "HubSeq"
            },
            "tags_all": {
              "Name": "hubseq-oregon-dev-tg-demo1b-frontend",
              "company": "HubSeq"
            },
            "target_type": "ip",
            "vpc_id": "vpc-0cffea4f90e4ab656"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "front_end_tg_demo1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:700080227344:targetgroup/front-end-tg-demo-1c/9e990862b688d353",
            "arn_suffix": "targetgroup/front-end-tg-demo-1c/9e990862b688d353",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:700080227344:targetgroup/front-end-tg-demo-1c/9e990862b688d353",
            "lambda_multi_value_headers_enabled": false,
            "name": "front-end-tg-demo-1c",
            "port": 8081,
            "preserve_client_ip": "false",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "tags": {
              "Name": "hubseq-oregon-dev-tg-demo1c-frontend",
              "company": "HubSeq"
            },
            "tags_all": {
              "Name": "hubseq-oregon-dev-tg-demo1c-frontend",
              "company": "HubSeq"
            },
            "target_type": "ip",
            "vpc_id": "vpc-0cffea4f90e4ab656"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "front_end_tg_demo1d",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:700080227344:targetgroup/front-end-tg-demo-1d/1ee6318700f8439b",
            "arn_suffix": "targetgroup/front-end-tg-demo-1d/1ee6318700f8439b",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:700080227344:targetgroup/front-end-tg-demo-1d/1ee6318700f8439b",
            "lambda_multi_value_headers_enabled": false,
            "name": "front-end-tg-demo-1d",
            "port": 8082,
            "preserve_client_ip": "false",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "tags": {
              "Name": "hubseq-oregon-dev-tg-demo1d-frontend",
              "company": "HubSeq"
            },
            "tags_all": {
              "Name": "hubseq-oregon-dev-tg-demo1d-frontend",
              "company": "HubSeq"
            },
            "target_type": "ip",
            "vpc_id": "vpc-0cffea4f90e4ab656"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "front_end_tg_demo1e",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:700080227344:targetgroup/front-end-tg-demo-1e/4bfb7403bf06b32e",
            "arn_suffix": "targetgroup/front-end-tg-demo-1e/4bfb7403bf06b32e",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:700080227344:targetgroup/front-end-tg-demo-1e/4bfb7403bf06b32e",
            "lambda_multi_value_headers_enabled": false,
            "name": "front-end-tg-demo-1e",
            "port": 8083,
            "preserve_client_ip": "false",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "tags": {
              "Name": "hubseq-oregon-dev-tg-demo1e-frontend",
              "company": "HubSeq"
            },
            "tags_all": {
              "Name": "hubseq-oregon-dev-tg-demo1e-frontend",
              "company": "HubSeq"
            },
            "target_type": "ip",
            "vpc_id": "vpc-0cffea4f90e4ab656"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "front_end_tg_attachment_data1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-2:700080227344:targetgroup/front-end-tg-data-1/70244983d23d00d3-20220118201654561000000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:700080227344:targetgroup/front-end-tg-data-1/70244983d23d00d3",
            "target_id": "10.88.1.27"
          },
          "dependencies": [
            "aws_lb_target_group.front_end_tg_data1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "front_end_tg_attachment_data1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-2:700080227344:targetgroup/front-end-tg-data-1b/05d02858655e145d-20220318213607298500000001",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:700080227344:targetgroup/front-end-tg-data-1b/05d02858655e145d",
            "target_id": "10.88.1.27"
          },
          "dependencies": [
            "aws_lb_target_group.front_end_tg_data1b",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "front_end_tg_attachment_data1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-2:700080227344:targetgroup/front-end-tg-data-1c/5f3fce9ba135846e-20220319002527885000000001",
            "port": 8081,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:700080227344:targetgroup/front-end-tg-data-1c/5f3fce9ba135846e",
            "target_id": "10.88.1.27"
          },
          "dependencies": [
            "aws_lb_target_group.front_end_tg_data1c",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "front_end_tg_attachment_data1d",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-2:700080227344:targetgroup/front-end-tg-data-1d/2e4d0c2fdb30608e-20220319002527963600000002",
            "port": 8082,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:700080227344:targetgroup/front-end-tg-data-1d/2e4d0c2fdb30608e",
            "target_id": "10.88.1.27"
          },
          "dependencies": [
            "aws_lb_target_group.front_end_tg_data1d",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "front_end_tg_attachment_demo1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-2:700080227344:targetgroup/front-end-tg-demo-1/413da5d83d6688a0-20220320211057072700000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:700080227344:targetgroup/front-end-tg-demo-1/413da5d83d6688a0",
            "target_id": "10.88.0.152"
          },
          "dependencies": [
            "aws_lb_target_group.front_end_tg_demo1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "front_end_tg_attachment_demo1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-2:700080227344:targetgroup/front-end-tg-demo-1b/d0e272273189da40-20220320211057538100000006",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:700080227344:targetgroup/front-end-tg-demo-1b/d0e272273189da40",
            "target_id": "10.88.0.152"
          },
          "dependencies": [
            "aws_lb_target_group.front_end_tg_demo1b",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "front_end_tg_attachment_demo1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-2:700080227344:targetgroup/front-end-tg-demo-1c/9e990862b688d353-20220320211057102000000004",
            "port": 8081,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:700080227344:targetgroup/front-end-tg-demo-1c/9e990862b688d353",
            "target_id": "10.88.0.152"
          },
          "dependencies": [
            "aws_lb_target_group.front_end_tg_demo1c",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "front_end_tg_attachment_demo1d",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-2:700080227344:targetgroup/front-end-tg-demo-1d/1ee6318700f8439b-20220320211057091000000003",
            "port": 8082,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:700080227344:targetgroup/front-end-tg-demo-1d/1ee6318700f8439b",
            "target_id": "10.88.0.152"
          },
          "dependencies": [
            "aws_lb_target_group.front_end_tg_demo1d",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "front_end_tg_attachment_demo1e",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-2:700080227344:targetgroup/front-end-tg-demo-1e/4bfb7403bf06b32e-20220320211057367400000005",
            "port": 8083,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:700080227344:targetgroup/front-end-tg-demo-1e/4bfb7403bf06b32e",
            "target_id": "10.88.0.152"
          },
          "dependencies": [
            "aws_lb_target_group.front_end_tg_demo1e",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "rta-main-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01bb47f1264d00a57",
            "original_route_table_id": "rtb-0ccb48e91cfc9b168",
            "route_table_id": "rtb-00a0fb113d06929c9",
            "vpc_id": "vpc-0cffea4f90e4ab656"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_route_table",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:700080227344:route-table/rtb-00a0fb113d06929c9",
            "id": "rtb-00a0fb113d06929c9",
            "owner_id": "700080227344",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fbf519a226a466ae",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "hubseq-oregon-dev-public-route-table",
              "company": "HubSeq"
            },
            "tags_all": {
              "Name": "hubseq-oregon-dev-public-route-table",
              "company": "HubSeq"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cffea4f90e4ab656"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta-public-subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bea4d43ef095f689",
            "route_table_id": "rtb-00a0fb113d06929c9",
            "subnet_id": "subnet-055bc946ab7a3d117"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01ad5d2129864d2ff",
            "route_table_id": "rtb-00a0fb113d06929c9",
            "subnet_id": "subnet-0fa30f015524d724a"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0115267a24509ca20",
            "route_table_id": "rtb-00a0fb113d06929c9",
            "subnet_id": "subnet-077f33c0fe9e7e604"
          },
          "dependencies": [
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc",
            "aws_internet_gateway.igw"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-030ca97606c7eb06c",
            "route_table_id": "rtb-00a0fb113d06929c9",
            "subnet_id": "subnet-006b096220046e290"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "reachable_from_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:700080227344:security-group/sg-0b50a57eb72db3a1e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b50a57eb72db3a1e",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.88.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "hubseq-oregon-dev-reachable-from-vpc",
            "name_prefix": "",
            "owner_id": "700080227344",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "hubseq-oregon-dev-reachable-from-vpc",
              "company": "HubSeq"
            },
            "tags_all": {
              "Name": "hubseq-oregon-dev-reachable-from-vpc",
              "company": "HubSeq"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cffea4f90e4ab656"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "reachable_with_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:700080227344:security-group/sg-0bfdfb66cdafe67d7",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bfdfb66cdafe67d7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3001,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3001
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5001
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8081
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8082,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8082
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "hubseq-oregon-dev-reachable-with-http",
            "name_prefix": "",
            "owner_id": "700080227344",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "hubseq-oregon-dev-reachable-with-http",
              "company": "HubSeq"
            },
            "tags_all": {
              "Name": "hubseq-oregon-dev-reachable-with-http",
              "company": "HubSeq"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cffea4f90e4ab656"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "reachable_with_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:700080227344:security-group/sg-04a2428eaabdc5573",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04a2428eaabdc5573",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "hubseq-oregon-dev-reachable-with-ssh",
            "name_prefix": "",
            "owner_id": "700080227344",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "hubseq-oregon-dev-reachable-with-ssh",
              "company": "HubSeq"
            },
            "tags_all": {
              "Name": "hubseq-oregon-dev-reachable-with-ssh",
              "company": "HubSeq"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cffea4f90e4ab656"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:700080227344:subnet/subnet-055bc946ab7a3d117",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.88.0.0/23",
            "id": "subnet-055bc946ab7a3d117",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "700080227344",
            "tags": {
              "Name": "hubseq-oregon-dev-public-subnet-0",
              "company": "HubSeq"
            },
            "tags_all": {
              "Name": "hubseq-oregon-dev-public-subnet-0",
              "company": "HubSeq"
            },
            "vpc_id": "vpc-0cffea4f90e4ab656"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:700080227344:subnet/subnet-0fa30f015524d724a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.88.2.0/23",
            "id": "subnet-0fa30f015524d724a",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "700080227344",
            "tags": {
              "Name": "hubseq-oregon-dev-public-subnet-1",
              "company": "HubSeq"
            },
            "tags_all": {
              "Name": "hubseq-oregon-dev-public-subnet-1",
              "company": "HubSeq"
            },
            "vpc_id": "vpc-0cffea4f90e4ab656"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:700080227344:subnet/subnet-077f33c0fe9e7e604",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.88.4.0/23",
            "id": "subnet-077f33c0fe9e7e604",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "700080227344",
            "tags": {
              "Name": "hubseq-oregon-dev-public-subnet-2",
              "company": "HubSeq"
            },
            "tags_all": {
              "Name": "hubseq-oregon-dev-public-subnet-2",
              "company": "HubSeq"
            },
            "vpc_id": "vpc-0cffea4f90e4ab656"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:700080227344:subnet/subnet-006b096220046e290",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2d",
            "availability_zone_id": "usw2-az4",
            "cidr_block": "10.88.6.0/23",
            "id": "subnet-006b096220046e290",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "700080227344",
            "tags": {
              "Name": "hubseq-oregon-dev-public-subnet-3",
              "company": "HubSeq"
            },
            "tags_all": {
              "Name": "hubseq-oregon-dev-public-subnet-3",
              "company": "HubSeq"
            },
            "vpc_id": "vpc-0cffea4f90e4ab656"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:700080227344:vpc/vpc-0cffea4f90e4ab656",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.88.0.0/16",
            "default_network_acl_id": "acl-0b4f563a5ef372d4a",
            "default_route_table_id": "rtb-00a0fb113d06929c9",
            "default_security_group_id": "sg-0be63635bfc7b7932",
            "dhcp_options_id": "dopt-091d793b4683a6b3d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0cffea4f90e4ab656",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-00a0fb113d06929c9",
            "owner_id": "700080227344",
            "tags": {
              "Name": "hubseq-oregon-dev-vpc",
              "company": "HubSeq"
            },
            "tags_all": {
              "Name": "hubseq-oregon-dev-vpc",
              "company": "HubSeq"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:700080227344:vpc-endpoint/vpce-09d320ccca51c009f",
            "cidr_blocks": [
              "3.5.76.0/22",
              "3.5.80.0/21",
              "18.34.48.0/20",
              "18.34.244.0/22",
              "52.92.128.0/17",
              "52.218.128.0/17"
            ],
            "id": "vpce-09d320ccca51c009f",
            "owner_id": "700080227344",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-68a54001",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-00a0fb113d06929c9"
            ],
            "service_name": "com.amazonaws.us-west-2.s3",
            "state": "available",
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0cffea4f90e4ab656"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    }
  ]
}